--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
 	},
 	"scripts": {
 		"dev": "npx cross-env NODE_ENV=development nodemon ./src/app.ts --inspect ./public",
-		"build": "tsc --project ./"
+
+		"start": "node ./build/app.js",
+		"build:backend": "tsc --project ./",
+		"build": "npm run build:backend"
 	},
 	"repository": {
 		"type": "git",
