--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/passport": "^1.0.6",
 		"@types/passport-google-oauth": "^1.0.41",
 		"@types/passport-local": "^1.0.33",
+		"@types/validator": "^13.6.3",
 		"crossenv": "0.0.2-security",
 		"nodemon": "^2.0.7",
 		"prettier": "^2.2.1",
@@ -39,7 +40,6 @@
 	},
 	"scripts": {
 		"dev": "npx cross-env NODE_ENV=development nodemon ./src/app.ts --inspect ./public",
-
 		"start": "node ./build/app.js",
 		"build:backend": "tsc --project ./",
 		"build": "npm run build:backend"
