--- a/config/production.yml
+++ b/config/production.yml
@@ -1,6 +1,5 @@
 db:
-  # postgresql://[user[:password]@][netloc][:port][,...][/dbname][?param1=value1&...]
-  url: postgresql://postgres:qwerty@127.0.0.1:5433/postgres
+  url: ''
 
 sessionSecret: qwerty
 
