--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
 		"@types/passport-google-oauth": "^1.0.41",
 		"@types/passport-local": "^1.0.33",
 		"@types/validator": "^13.6.3",
-		"crossenv": "0.0.2-security",
 		"nodemon": "^2.0.7",
 		"prettier": "^2.2.1",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.2.3"
 	},
 	"scripts": {
-		"dev": "npx cross-env NODE_ENV=development nodemon ./src/app.ts --inspect ./public",
+		"dev": "npx nodemon -r dotenv/config ./src/app.ts --inspect ./public dotenv_config_path=./config/development.env",
+
 		"start": "node ./build/src/app.js",
-		"build:backend": "rm -rf ./build && tsc --project ./ && cp -r ./config ./build/config && node ./build/src/migration/build-create-config.js && cp -r ./public ./build/public",
+		"build:backend": "rm -rf ./build && tsc --project ./ && cp -r ./config ./build/config && cp -r ./public ./build/public",
 		"build": "npm run build:backend"
 	},
 	"repository": {
