--- a/config/production.yml
+++ b/config/production.yml
@@ -1,1 +1,10 @@
-abc: true
+dbConfig:
+  ssl:
+    rejectUnauthorized: false
+
+sequelizeConfig:
+	ssl: false
+	dialectOptions:
+		ssl:
+			require: false
+			rejectUnauthorized: false
