--- a/config/production.yml
+++ b/config/production.yml
@@ -5,5 +5,6 @@ dbConfig:
 sequelizeConfig:
     ssl: false
     dialectOptions:
-        require: false
-        rejectUnauthorized: false
+        ssl:
+            require: false
+            rejectUnauthorized: false
