--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
 	"devDependencies": {
 		"@types/connect-pg-simple": "^4.2.2",
 		"@types/cors": "^2.8.10",
-		"@types/express": "^4.17.11",
+		"@types/express": "^4.17.13",
+		"@types/express-serve-static-core": "^4.17.21",
 		"@types/express-session": "^1.17.3",
 		"@types/md5": "^2.3.0",
 		"@types/morgan": "^1.9.2",
+		"@types/node": "^16.4.7",
 		"@types/passport": "^1.0.6",
 		"@types/passport-google-oauth": "^1.0.41",
 		"@types/passport-local": "^1.0.33",
 		"@types/validator": "^13.6.3",
+		"dotenv": "^10.0.0",
 		"nodemon": "^2.0.7",
 		"prettier": "^2.2.1",
 		"ts-node": "^9.1.1",
@@ -39,9 +42,11 @@
 	},
 	"scripts": {
 		"dev": "npx nodemon -r dotenv/config ./src/app.ts --inspect ./public dotenv_config_path=./config/development.env",
+		"dev:migrate": "ts-node -r dotenv/config ./src/migration/_script.ts dotenv_config_path=./config/development.env",
 		"start": "node ./build/src/app.js",
 		"build:backend": "rm -rf ./build && tsc --project ./ && cp -r ./config ./build/config && cp -r ./public ./build/public",
-		"build": "npm run build:backend"
+		"build": "npm run build:backend",
+		"prod:migrate": "node ./build/src/migration/_script uselessneccessaryarg"
 	},
 	"repository": {
 		"type": "git",
