--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"body-parser": "^1.19.0",
 		"connect-pg-simple": "^6.2.1",
 		"cors": "^2.8.5",
+		"cyrillic-to-translit-js": "^3.1.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"helmet": "^4.4.1",
